# downloader

./: .pdm-python  db.sqlite3  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
authentication/: serializers.py  urls.py  views.py
authentication/templates/: email.html
authentication/utils/: send_mail.py
config/: celery.py  settings.py  urls.py
downloader/: admin.py  models.py  serializers.py  tasks.py  views.py
downloader/migrations/: 0001_initial.py  0002_alter_archive_archive_alter_archive_type.py  0003_remove_archive_archive.py  0004_archive_archive.py  0005_alter_archive_user.py  0006_alter_archive_type_alter_archive_url.py  0007_rename_date_archive_created_at_archive_status_and_more.py  0008_alter_archive_status.py
downloader/services/: mime_type.py  process_archive.py
downloader/utils/: archive.py  download.py  fill_type.py  generic.py  video.py
