[project]
name = "downloader"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "VitorAndreSilva", email = "alunovitorandre@gmail.com"},
]
dependencies = ["django>=5.2.7", "djangorestframework>=3.16.1", "playwright>=1.56.0", "requests>=2.32.5", "yt-dlp>=2025.11.12", "whitenoise>=6.11.0", "gunicorn>=23.0.0", "django-cors-headers>=4.9.0", "djangorestframework-simplejwt>=5.5.1", "psycopg2-binary>=2.9.11", "dj-database-url>=3.0.1", "python-dotenv>=1.2.1", "celery>=5.6.2", "redis>=7.1.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
